# epsilon-phase-transition

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: 01_trajectory_bend.py  02_epsilon_dial.py  03_nullification.py
src/eps_transition/: __init__.py  data.py  optimizers.py  oracles.py  trainer.py  vis.py
