[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eps-transition"
version = "0.1.0"
description = "Epsilon-Driven L_inf to L_2 Geometric Phase Transitions in Adaptive Optimizers"
readme = "README.md"
requires-python = ">=3.14"
dependencies =[
    "matplotlib",
    "numpy",
    "torch",
    "cvxpy"
]

[dependency-groups]
dev =[
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eps_transition"]

[tool.ruff]
line-length = 100
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "RUF", "SIM", "PTH"]
ignore = []

[tool.ty.environment]
python-version = "3.14"
root = ["./src"]

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true
output-format = "full"
